refactor: Validaciones y mejoras de logica